--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   },
   "homepage": "https://github.com/NortonLiaz88/octavia-turbo-drag-drop#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "restricted"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.6.0",
