chore: turn into restricted project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-turbo-drag-drop",
+  "name": "@nortonliaz/react-native-turbo-drag-drop",
   "version": "0.1.1",
   "description": "a react-native implementation of drag and drop",
   "main": "./lib/module/index.js",
