--- a/package.json
+++ b/package.json
@@ -79,20 +79,20 @@
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-builder-bob": "^0.40.8",
-    "react-native-gesture-handler": "^2.26.0",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.11.0",
     "release-it": "^17.10.0",
     "turbo": "^1.10.7",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*",
-    "react-native-gesture-handler": "^2.26.0",
-    "react-native-reanimated": "^3.10.0"
+    "react-native": "^0.72.6",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.11.0"
   },
   "workspaces": [
     "example"
