fix: move code to old arch

--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -32,8 +32,15 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-newArchEnabled=true
+newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+# Adicione esta linha no final do arquivo
+# Exemplo para NVM:
+nodejs_binary=/Users/lse/.nvm/versions/node/v20.19.0/bin/node
+# Exemplo para Homebrew:
+nodejs_binary=/opt/homebrew/bin/node
